Wed Jul 30 22:36:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - New conversations can now be started from the buddy list.
	  - Greyed out buttons that aren't currently setup to be used.

Wed Jul 30 19:36:56 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The account editor dialog now works correctly in all tests.
	  - Added a button for deleting an account.

Wed Jul 30 18:34:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	  - The protocol tab is now only enabled if there are options inside it.

Wed Jul 30 18:31:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Changing the protocol on the account editor's protocol drop-down
	    list now updates the whole account editor.

Tue Jul 29 01:39:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Editting an account without a protocol no longer crashes qpe-gaim.

Tue Jul 29 01:35:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Accounts without a protocol can no longer be connected to
	    or disconnected from.

Tue Jul 29 01:31:25 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Updating the protocol list box on an account now updates
	    part of the Account tab.

Tue Jul 29 01:15:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The edit and delete account buttons are disabled until an
	    account is selected.

Tue Jul 29 01:11:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp: