@@ -1,3 +1,10 @@
+Wed Jul 30 22:42:14 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Pressing Enter in the entry field in conv windows now sends the
+	    text.
+
 Wed Jul 30 22:36:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
